Fix bug and improve validation - Improve payment account validation - Fix NPE on bill receivables and payable endpoint